--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -37,5 +37,13 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/contactGetResults"
+        android:layout_centerHorizontal="true"
+        android:text="@string/start_game_button" />
     
 </RelativeLayout>
