--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,49 +1,54 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="${relativePackage}.${activityClass}" >
-
-    <TextView
-        android:id="@+id/host_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/host_title"
-        android:layout_centerHorizontal="true"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/contactLookupPrompt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/host_title"
-        android:text="@string/contact_lookup_prompt" />
-    
-    <Button
-        android:id="@+id/contactLookupButton"
-    	android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/host_title"
-        android:layout_toRightOf="@+id/contactLookupPrompt"
-        android:text="@string/contact_lookup_button"
-        android:onClick="contact_lookup" />
-    
-    <TextView
-        android:id="@+id/contactGetResults"
-        android:layout_below="@+id/contactLookupButton"
-    	android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/contactGetResults"
-        android:layout_centerHorizontal="true"
-        android:text="@string/start_game_button" />
-    
-</RelativeLayout>
+    android:layout_height="match_parent">
+	<RelativeLayout  
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" >
+	
+	    <TextView
+	        android:id="@+id/host_title"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/host_title"
+	        android:layout_centerHorizontal="true"
+	        android:textAppearance="?android:attr/textAppearanceLarge" />
+	
+	    <TextView
+	        android:id="@+id/contactLookupPrompt"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:layout_marginTop="15dp"
+	        android:layout_below="@+id/host_title"
+	        android:text="@string/contact_lookup_prompt" />
+	
+	    <TextView
+	        android:id="@+id/contactGetResults"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:layout_below="@+id/contactLookupButton"
+	        android:text="" />
+	
+	    <Button
+	        android:id="@+id/startGameButton"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentRight="true"
+	        android:layout_below="@+id/contactGetResults"
+	        android:onClick="start_game"
+	        android:text="@string/start_game_button" />
+	
+	    <Button
+	        android:id="@+id/contactLookupButton"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentRight="true"
+	        android:layout_below="@+id/contactLookupPrompt"
+	        android:onClick="contact_lookup"
+	        android:text="@string/contact_lookup_button" />
+	    
+	</RelativeLayout>
+</ScrollView>
