--- a/res/layout/activity_launcher.xml
+++ b/res/layout/activity_launcher.xml
@@ -37,5 +37,14 @@
 	        android:text="@string/gameStatusButton"
 	        android:onClick="goToGameStatus" />
 	
+	    <Button
+	        android:id="@+id/aboutButton"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+			android:layout_below="@+id/gameStatusButton"
+			android:layout_marginTop="20dp"
+	        android:layout_centerHorizontal="true"
+	        android:text="@string/aboutButton"
+	        android:onClick="goToAboutScreen" />
 	</RelativeLayout>
 </ScrollView>
