Some UI changes

--- a/res/layout/activity_game_status.xml
+++ b/res/layout/activity_game_status.xml
@@ -23,7 +23,7 @@
 	        android:layout_below="@+id/GameStatusTitle"
 	        android:layout_marginTop="10dp"
 	        android:layout_alignParentLeft="true"
-	        android:text="You have been eaten by a grue." />
+	        android:text="" />
 	    	
 	</RelativeLayout>
 </ScrollView>
