--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -32,15 +32,7 @@
 	        android:layout_below="@+id/contactLookupButton"
 	        android:text="" />
 	
-	    <Button
-	        android:id="@+id/startGameButton"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentRight="true"
-	        android:layout_below="@+id/contactGetResults"
-	        android:onClick="start_game"
-	        android:text="@string/start_game_button" />
-	
+	    
 	    <Button
 	        android:id="@+id/contactLookupButton"
 	        android:layout_width="wrap_content"
@@ -50,5 +42,15 @@
 	        android:onClick="contact_lookup"
 	        android:text="@string/contact_lookup_button" />
 	    
+	    
+   	    <Button
+	        android:id="@+id/startGameButton"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentRight="true"
+	        android:layout_below="@+id/contactLookupButton"
+	        android:onClick="start_game"
+	        android:text="@string/start_game_button" />
+   	    
 	</RelativeLayout>
 </ScrollView>
